@@ -21,7 +21,6 @@ package org.apache.fineract.portfolio.shareaccounts.domain;
 import java.util.Date;
 import java.util.HashSet;
 import java.util.Set;
-
 import javax.persistence.CascadeType;
 import javax.persistence.Column;
 import javax.persistence.Embedded;
@@ -36,8 +35,8 @@ import javax.persistence.Table;
 import javax.persistence.Temporal;
 import javax.persistence.TemporalType;
 import javax.persistence.Transient;
-
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.fineract.infrastructure.core.domain.AbstractPersistableCustom;
 import org.apache.fineract.infrastructure.security.service.RandomPasswordGenerator;
 import org.apache.fineract.organisation.monetary.domain.MonetaryCurrency;
 import org.apache.fineract.portfolio.client.domain.Client;
@@ -45,11 +44,10 @@ import org.apache.fineract.portfolio.common.domain.PeriodFrequencyType;
 import org.apache.fineract.portfolio.savings.domain.SavingsAccount;
 import org.apache.fineract.portfolio.shareproducts.domain.ShareProduct;
 import org.apache.fineract.useradministration.domain.AppUser;
-import org.apache.fineract.infrastructure.core.domain.AbstractPersistableCustom;
 
 @Entity
 @Table(name = "m_share_account")
-public class ShareAccount extends AbstractPersistableCustom<Long> {
+public class ShareAccount extends AbstractPersistableCustom {
 
     @ManyToOne
     @JoinColumn(name = "client_id", nullable = true)
@@ -132,7 +130,7 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
     @JoinColumn(name = "savings_account_id", nullable = true)
     private SavingsAccount savingsAccount;
 
-    @OneToMany(cascade = CascadeType.ALL, mappedBy = "shareAccount", orphanRemoval = true, fetch=FetchType.EAGER)
+    @OneToMany(cascade = CascadeType.ALL, mappedBy = "shareAccount", orphanRemoval = true, fetch = FetchType.EAGER)
     private Set<ShareAccountTransaction> shareAccountTransactions;
 
     @Column(name = "lockin_period_frequency")
@@ -149,7 +147,7 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
     @Column(name = "minimum_active_period_frequency_enum", nullable = true)
     private PeriodFrequencyType minimumActivePeriodFrequencyType;
 
-    @OneToMany(cascade = CascadeType.ALL, mappedBy = "shareAccount", orphanRemoval = true, fetch=FetchType.EAGER)
+    @OneToMany(cascade = CascadeType.ALL, mappedBy = "shareAccount", orphanRemoval = true, fetch = FetchType.EAGER)
     private Set<ShareAccountCharge> charges;
 
     @Transient
@@ -217,7 +215,7 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
 
     public boolean setSubmittedDate(final Date submittedDate) {
         boolean toReturn = false;
-        if (!this.submittedDate.equals(submittedDate)) {
+        if (this.submittedDate.compareTo(submittedDate) == 0 ? Boolean.FALSE : Boolean.TRUE) {
             this.submittedDate = submittedDate;
             toReturn = true;
         }
@@ -226,7 +224,7 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
 
     public boolean setApprovedDate(final Date approvedDate) {
         boolean toReturn = false;
-        if (!this.approvedDate.equals(approvedDate)) {
+        if (this.approvedDate.compareTo(approvedDate) == 0 ? Boolean.FALSE : Boolean.TRUE) {
             this.approvedDate = approvedDate;
             toReturn = true;
         }
@@ -258,27 +256,28 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
 
     public void addTransaction(final ShareAccountTransaction transaction) {
         transaction.setShareAccount(this);
-        if(transaction.isPendingForApprovalTransaction()) {
-            if(this.totalSharesPending == null) {
-                this.totalSharesPending = transaction.getTotalShares() ;
-            }else {
-                this.totalSharesPending += transaction.getTotalShares() ;    
+        if (transaction.isPendingForApprovalTransaction()) {
+            if (this.totalSharesPending == null) {
+                this.totalSharesPending = transaction.getTotalShares();
+            } else {
+                this.totalSharesPending += transaction.getTotalShares();
             }
-            
-        }else if(transaction.isPurchasTransaction()) {
-            if(this.totalSharesApproved == null) {
-                this.totalSharesApproved = transaction.getTotalShares() ; 
-            }else {
-                this.totalSharesApproved += transaction.getTotalShares() ;
+
+        } else if (transaction.isPurchasTransaction()) {
+            if (this.totalSharesApproved == null) {
+                this.totalSharesApproved = transaction.getTotalShares();
+            } else {
+                this.totalSharesApproved += transaction.getTotalShares();
             }
         }
-        
+
         this.shareAccountTransactions.add(transaction);
     }
-    
+
     public boolean setAllowDividendCalculationForInactiveClients(Boolean allowDividendCalculationForInactiveClients) {
         boolean returnValue = false;
-        if (this.allowDividendCalculationForInactiveClients == null || !this.allowDividendCalculationForInactiveClients.equals(allowDividendCalculationForInactiveClients)) {
+        if (this.allowDividendCalculationForInactiveClients == null
+                || !this.allowDividendCalculationForInactiveClients.equals(allowDividendCalculationForInactiveClients)) {
             this.allowDividendCalculationForInactiveClients = allowDividendCalculationForInactiveClients;
             returnValue = true;
         }
@@ -296,7 +295,8 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
 
     public boolean setLockPeriodFrequencyEnum(final PeriodFrequencyType lockinPeriodFrequencyType) {
         boolean returnValue = false;
-        if (this.lockinPeriodFrequencyType == null || !this.lockinPeriodFrequencyType.getValue().equals(lockinPeriodFrequencyType.getValue())) {
+        if (this.lockinPeriodFrequencyType == null
+                || !this.lockinPeriodFrequencyType.getValue().equals(lockinPeriodFrequencyType.getValue())) {
             this.lockinPeriodFrequencyType = lockinPeriodFrequencyType;
             returnValue = true;
         }
@@ -314,7 +314,8 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
 
     public boolean setminimumActivePeriodTypeEnum(final PeriodFrequencyType minimumActivePeriodForDividends) {
         boolean returnValue = false;
-        if (this.minimumActivePeriodFrequencyType == null || !this.minimumActivePeriodFrequencyType.getValue().equals(minimumActivePeriodForDividends.getValue())) {
+        if (this.minimumActivePeriodFrequencyType == null
+                || !this.minimumActivePeriodFrequencyType.getValue().equals(minimumActivePeriodForDividends.getValue())) {
             this.minimumActivePeriodFrequencyType = minimumActivePeriodForDividends;
             returnValue = true;
         }
@@ -344,9 +345,9 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
     }
 
     public Client getClient() {
-        return this.client ;
+        return this.client;
     }
-    
+
     public String getSavingsAccountNo() {
         return this.savingsAccount.getAccountNumber();
     }
@@ -370,9 +371,9 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
     }
 
     public void updateRequestedShares(ShareAccountTransaction purchased) {
-    	for(ShareAccountTransaction transaction: this.shareAccountTransactions) {
-            if(!transaction.isChargeTransaction() && transaction.getId().equals(purchased.getId())) {
-                transaction.update(purchased.getPurchasedDate(), purchased.getTotalShares(), purchased.getPurchasePrice());    
+        for (ShareAccountTransaction transaction : this.shareAccountTransactions) {
+            if (!transaction.isChargeTransaction() && transaction.getId().equals(purchased.getId())) {
+                transaction.update(purchased.getPurchasedDate(), purchased.getTotalShares(), purchased.getPurchasePrice());
             }
         }
     }
@@ -422,11 +423,11 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
         this.closedDate = null;
         this.closedBy = null;
         this.totalSharesApproved = null;
-        Long tempTotalShares = new Long(0);
+        Long tempTotalShares = Long.valueOf(0);
         for (ShareAccountTransaction transaction : this.shareAccountTransactions) {
-            if(transaction.isPurchasTransaction()) {
+            if (transaction.isPurchasTransaction()) {
                 transaction.undoApprove();
-                tempTotalShares += transaction.getTotalShares() ;
+                tempTotalShares += transaction.getTotalShares();
             }
         }
         this.totalSharesPending = tempTotalShares;
@@ -439,19 +440,20 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
         this.totalSharesPending = null;
         this.totalSharesApproved = null;
         for (ShareAccountTransaction transaction : this.shareAccountTransactions) {
-            if(transaction.isPendingForApprovalTransaction()) {
+            if (transaction.isPendingForApprovalTransaction()) {
                 transaction.reject();
             }
         }
     }
 
     public void close(final Date closedDate, final AppUser closedBy) {
-        this.closedDate = closedDate ;
-        this.closedBy = closedBy ;
-        this.status = ShareAccountStatusType.CLOSED.getValue() ;
+        this.closedDate = closedDate;
+        this.closedBy = closedBy;
+        this.status = ShareAccountStatusType.CLOSED.getValue();
         this.totalSharesPending = null;
         this.totalSharesApproved = null;
     }
+
     public String getAccountNumber() {
         return this.accountNumber;
     }
@@ -500,9 +502,9 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
     }
 
     public Long getTotalApprovedShares() {
-        return this.totalSharesApproved ;
+        return this.totalSharesApproved;
     }
-    
+
     public void removePendingShares(Long totalShares) {
         this.totalSharesPending -= totalShares;
     }
@@ -512,63 +514,63 @@ public class ShareAccount extends AbstractPersistableCustom<Long> {
     }
 
     public void setTotalPendingShares(final Long shares) {
-        this.totalSharesPending = shares ;
+        this.totalSharesPending = shares;
     }
-    
+
     public ShareAccountTransaction getShareAccountTransaction(final ShareAccountTransaction transaction) {
         ShareAccountTransaction returnTrans = null;
         for (ShareAccountTransaction tran : this.shareAccountTransactions) {
-            if (tran.getPurchasedDate().equals(transaction.getPurchasedDate())
-                    && tran.getTotalShares().equals(transaction.getTotalShares())
-                    && tran.getPurchasePrice().equals(transaction.getPurchasePrice())
-                    && tran.getTransactionStatus().equals(transaction.getTransactionStatus())
-                    && tran.getTransactionType().equals(transaction.getTransactionType())) {
+            if (tran.getPurchasedDate().compareTo(transaction.getPurchasedDate()) == 0 ? Boolean.TRUE
+                    : Boolean.FALSE && tran.getTotalShares().equals(transaction.getTotalShares())
+                            && tran.getPurchasePrice().compareTo(transaction.getPurchasePrice()) == 0 ? Boolean.TRUE
+                                    : Boolean.FALSE && tran.getTransactionStatus().equals(transaction.getTransactionStatus())
+                                            && tran.getTransactionType().equals(transaction.getTransactionType())) {
                 returnTrans = tran;
                 break;
             }
         }
         return returnTrans;
     }
-    
-    public Date getSubmittedDate(){
-        return this.submittedDate ;
+
+    public Date getSubmittedDate() {
+        return this.submittedDate;
     }
-    
+
     public Date getApprovedDate() {
-        return this.approvedDate ;
+        return this.approvedDate;
     }
 
     public void removeTransactions() {
-        for(ShareAccountTransaction transaction: this.shareAccountTransactions) {
+        for (ShareAccountTransaction transaction : this.shareAccountTransactions) {
             transaction.setActive(false);
         }
-        this.totalSharesApproved = new Long(0) ;
-        this.totalSharesPending = new Long(0) ;
+        this.totalSharesApproved = Long.valueOf(0);
+        this.totalSharesPending = Long.valueOf(0);
     }
 
     public void removeCharges() {
-        for(ShareAccountCharge charge: this.charges) {
+        for (ShareAccountCharge charge : this.charges) {
             charge.setActive(false);
         }
     }
 
     public void addCharges(Set<ShareAccountCharge> charges) {
-        this.charges.addAll(charges) ;
+        this.charges.addAll(charges);
     }
-    
+
     public Integer getLockinPeriodFrequency() {
-        return this.lockinPeriodFrequency ;
+        return this.lockinPeriodFrequency;
     }
-    
-    public  PeriodFrequencyType getLockinPeriodFrequencyType() {
-        return this.lockinPeriodFrequencyType ;
+
+    public PeriodFrequencyType getLockinPeriodFrequencyType() {
+        return this.lockinPeriodFrequencyType;
     }
-    
+
     public Date getActivatedDate() {
-        return this.activatedDate ;
+        return this.activatedDate;
     }
-    
+
     public Integer status() {
-        return this.status ;
+        return this.status;
     }
 }
